--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ S3method(fixupData,CostSensTask)
 S3method(fixupData,RegrTask)
 S3method(fixupData,SupervisedTask)
 S3method(fixupData,SurvTask)
-S3method(getAggrMeasures,BenchmarkResult)
+S3method(getAggrPerformances,BenchmarkResult)
 S3method(getFeatSelResult,BenchmarkResult)
 S3method(getFeatSelResult,WrappedModel)
 S3method(getFilterResult,BenchmarkResult)
@@ -26,9 +26,9 @@ S3method(getFilterResult,WrappedModel)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,WrappedModel)
-S3method(getMeasures,BenchmarkResult)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
+S3method(getPerformances,BenchmarkResult)
 S3method(getPredictions,BenchmarkResult)
 S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
@@ -327,7 +327,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
-export(getAggrMeasures)
+export(getAggrPerformances)
 export(getBaggingModels)
 export(getConfMatrix)
 export(getCostSensClassifModel)
@@ -339,9 +339,9 @@ export(getFilterValues)
 export(getFilteredFeatures)
 export(getHyperPars)
 export(getLearnerModel)
-export(getMeasures)
 export(getMlrOptions)
 export(getParamSet)
+export(getPerformances)
 export(getPredictions)
 export(getProbabilities)
 export(getTaskCosts)
