add smote and SmoteWrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -233,6 +233,7 @@ S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
+S3method(trainLearner,SmoteWrapper)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
 S3method(trainLearner,classif.IBk)
@@ -399,6 +400,7 @@ export(makeRLearnerSurv)
 export(makeRegrTask)
 export(makeResampleDesc)
 export(makeResampleInstance)
+export(makeSmoteWrapper)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGrid)
