--- a/NAMESPACE
+++ b/NAMESPACE
@@ -442,6 +442,7 @@ export(setPredictType)
 export(setProperties)
 export(setThreshold)
 export(showHyperPars)
+export(smote)
 export(sse)
 export(subsample)
 export(subsetTask)
