--- a/NAMESPACE
+++ b/NAMESPACE
@@ -233,7 +233,7 @@ S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
-S3method(trainLearner,SmoteWrapper)
+S3method(trainLearner,SMOTEWrapper)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
 S3method(trainLearner,classif.IBk)
@@ -400,7 +400,7 @@ export(makeRLearnerSurv)
 export(makeRegrTask)
 export(makeResampleDesc)
 export(makeResampleInstance)
-export(makeSmoteWrapper)
+export(makeSMOTEWrapper)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGrid)
