--- a/NAMESPACE
+++ b/NAMESPACE
@@ -387,6 +387,7 @@ export(makeFeatSelWrapper)
 export(makeFilterWrapper)
 export(makeFixedHoldoutInstance)
 export(makeImputeMethod)
+export(makeImputeWrapper)
 export(makeLearner)
 export(makeMeasure)
 export(makeModelMultiplexer)
