tune: add GenSA as algorithm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -403,6 +403,7 @@ export(makeResampleInstance)
 export(makeSMOTEWrapper)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
+export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
 export(makeTuneControlIrace)
 export(makeTuneControlRandom)
