--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ S3method(checkTask,CostSensTask)
 S3method(checkTask,RegrTask)
 S3method(checkTask,SupervisedTask)
 S3method(checkTask,SurvTask)
+S3method(createDummyFeatures,SupervisedTask)
+S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
 S3method(downsample,SupervisedTask)
 S3method(estimateResidualVariance,Learner)
@@ -116,6 +118,7 @@ S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
+S3method(makeWrappedModel,OverBaggingWrapper)
 S3method(normalizeFeatures,SupervisedTask)
 S3method(normalizeFeatures,data.frame)
 S3method(predict,WrappedModel)
@@ -127,6 +130,7 @@ S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
+S3method(predictLearner,OverBaggingWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.IBk)
@@ -207,6 +211,7 @@ S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,Measure)
 S3method(print,OptModel)
+S3method(print,OverBaggingModel)
 S3method(print,Prediction)
 S3method(print,RepCVDesc)
 S3method(print,ResampleDesc)
@@ -231,6 +236,7 @@ S3method(trainLearner,DownsampleWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
+S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,SMOTEWrapper)
@@ -312,6 +318,7 @@ export(bootstrapB632plus)
 export(bootstrapOOB)
 export(cindex)
 export(configureMlr)
+export(createDummyFeatures)
 export(crossval)
 export(downsample)
 export(dropFeatures)
@@ -392,6 +399,7 @@ export(makeLearner)
 export(makeMeasure)
 export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
+export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
 export(makeRLearner)
