checkmate small changes, ready to go

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -486,6 +486,7 @@ export(tuneThreshold)
 export(undersample)
 import(BBmisc)
 import(ParamHelpers)
+import(checkmate)
 import(parallelMap)
 importFrom(codetools,findGlobals)
 importFrom(stats,predict)
