checkmate: no more checkArgs to be found

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -228,6 +228,9 @@ S3method(removeConstantFeatures,SupervisedTask)
 S3method(removeConstantFeatures,data.frame)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
+S3method(setPredictType,BaggingWrapper)
+S3method(setPredictType,BaseWrapper)
+S3method(setPredictType,Learner)
 S3method(trainLearner,BaggingWrapper)
 S3method(trainLearner,CostSensClassifWrapper)
 S3method(trainLearner,CostSensRegrWrapper)
