--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     parallelMap (>= 1.1),
     codetools,
     survival,
-    checkmate
+    checkmate (>= 1.1)
 Suggests:
     testthat,
     ada,
