--- a/NAMESPACE
+++ b/NAMESPACE
@@ -245,6 +245,7 @@ S3method(trainLearner,PreprocWrapper)
 S3method(trainLearner,SMOTEWrapper)
 S3method(trainLearner,TuneWrapper)
 S3method(trainLearner,UndersampleWrapper)
+S3method(trainLearner,WeightedClassesWrapper)
 S3method(trainLearner,classif.IBk)
 S3method(trainLearner,classif.J48)
 S3method(trainLearner,classif.JRip)
@@ -421,6 +422,7 @@ export(makeTuneControlIrace)
 export(makeTuneControlRandom)
 export(makeTuneWrapper)
 export(makeUndersampleWrapper)
+export(makeWeightedClassesWrapper)
 export(makeWrappedModel)
 export(mcc)
 export(mcp)
