--- a/NAMESPACE
+++ b/NAMESPACE
@@ -452,6 +452,7 @@ export(selectFeatures)
 export(setAggregation)
 export(setHyperPars)
 export(setHyperPars2)
+export(setId)
 export(setPredictType)
 export(setProperties)
 export(setThreshold)
