rename checkTask2 --> checkTask (arg checker) and checkTask --> checkTaskCreation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,11 @@ S3method(as.data.frame,BenchmarkResult)
 S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
-S3method(checkTask,ClassifTask)
-S3method(checkTask,CostSensTask)
-S3method(checkTask,RegrTask)
-S3method(checkTask,SupervisedTask)
-S3method(checkTask,SurvTask)
+S3method(checkTaskCreation,ClassifTask)
+S3method(checkTaskCreation,CostSensTask)
+S3method(checkTaskCreation,RegrTask)
+S3method(checkTaskCreation,SupervisedTask)
+S3method(checkTaskCreation,SurvTask)
 S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
