smote in C, much better speed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -458,6 +458,7 @@ export(setProperties)
 export(setThreshold)
 export(showHyperPars)
 export(smote)
+export(smote2)
 export(sse)
 export(subsample)
 export(subsetTask)
@@ -498,3 +499,4 @@ importFrom(codetools,findGlobals)
 importFrom(stats,predict)
 importFrom(survival,Surv)
 importFrom(survival,is.Surv)
+useDynLib(mlr,c_smote)
