new function: isFailureModel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,8 @@ S3method(getPerformances,BenchmarkResult)
 S3method(getPredictions,BenchmarkResult)
 S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
+S3method(isFailureModel,BaggingModel)
+S3method(isFailureModel,WrappedModel)
 S3method(listLearners,SupervisedTask)
 S3method(listLearners,character)
 S3method(listLearners,default)
@@ -375,6 +377,7 @@ export(imputeMin)
 export(imputeMode)
 export(imputeNormal)
 export(imputeUniform)
+export(isFailureModel)
 export(learnerArgsToControl)
 export(listFilterMethods)
 export(listLearners)
