--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Author: Bernd Bischl <bernd_bischl@gmx.net>,
     Michel Lang <lang@statistik.tu-dortmund.de>,
     Jakob Richter <code@jakob-r.de>,
     Leonard Judt <leonard.judt@tu-dortmund.de>
+    Tobias Kuehn <tobi.kuehn@gmx.de>
 Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
