--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,12 +7,13 @@ Description: Interface to a large number of classification and regression
     subsampling. Hyperparameter tuning with modern optimization techniques.
     Filter and wrapper methods for feature selection. Extension of basic
     learners with additional operations common in machine learning.
-Author: Bernd Bischl <bernd_bischl@gmx.net>,
-    Michel Lang <lang@statistik.tu-dortmund.de>,
-    Jakob Richter <code@jakob-r.de>,
-    Leonard Judt <leonard.judt@tu-dortmund.de>
-    Tobias Kuehn <tobi.kuehn@gmx.de>
-Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
+Authors@R: c(person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role =
+    c("aut", "cre")), person("Michel", "Lang", email =
+    "lang@statistik.tu-dortmund.de", role = "aut"), person("Jakob", "Bossek",
+    email = "jakob.bossek@tu-dortmund.de", role = "aut"), person("Leonard",
+    "Judt", email = "leonard.judt@tu-dortmund.de", role = "aut"),
+    person("Jakob", "Richter", email = "code@jakob-r.de", role = "aut"),
+    person("Tobias", "Kuehn", email = "tobi.kuehn@gmx.de", role = "aut"))
 URL: https://github.com/berndbischl/mlr
 BugReports: https://github.com/berndbischl/mlr/issues
 License: BSD_3_clause + file LICENSE
