fix factors for arbitraty learners

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.svm)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.blackboost)
+S3method(makeRLearner,regr.cforest)
 S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.fnn)
@@ -171,6 +172,7 @@ S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.svm)
 S3method(predictLearner,regr.IBk)
+S3method(predictLearner,regr.cforest)
 S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.fnn)
@@ -283,6 +285,7 @@ S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.svm)
 S3method(trainLearner,regr.IBk)
+S3method(trainLearner,regr.cforest)
 S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.fnn)
