refactor task hierarchy and introduce unsupervised and cluster task

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,13 @@ S3method(as.data.frame,Prediction)
 S3method(asROCRPrediction,Prediction)
 S3method(asROCRPrediction,ResamplePrediction)
 S3method(checkTaskCreation,ClassifTask)
+S3method(checkTaskCreation,ClusterTask)
 S3method(checkTaskCreation,CostSensTask)
 S3method(checkTaskCreation,RegrTask)
 S3method(checkTaskCreation,SupervisedTask)
 S3method(checkTaskCreation,SurvTask)
+S3method(checkTaskCreation,Task)
+S3method(checkTaskCreation,UnsupervisedTask)
 S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
@@ -16,10 +19,13 @@ S3method(downsample,SupervisedTask)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(fixupData,ClassifTask)
+S3method(fixupData,ClusterTask)
 S3method(fixupData,CostSensTask)
 S3method(fixupData,RegrTask)
 S3method(fixupData,SupervisedTask)
 S3method(fixupData,SurvTask)
+S3method(fixupData,Task)
+S3method(fixupData,UnsupervisedTask)
 S3method(getAggrPerformances,BenchmarkResult)
 S3method(getFeatSelResult,BenchmarkResult)
 S3method(getFeatSelResult,WrappedModel)
@@ -111,6 +117,7 @@ S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
 S3method(makeTaskDesc,ClassifTask)
+S3method(makeTaskDesc,ClusterTask)
 S3method(makeTaskDesc,CostSensTask)
 S3method(makeTaskDesc,RegrTask)
 S3method(makeTaskDesc,SurvTask)
@@ -203,6 +210,7 @@ S3method(print,BaseWrapper)
 S3method(print,BaseWrapperModel)
 S3method(print,BenchmarkResult)
 S3method(print,ClassifTask)
+S3method(print,ClusterTask)
 S3method(print,CostSensTask)
 S3method(print,FailureModel)
 S3method(print,FeatSelControl)
@@ -220,8 +228,10 @@ S3method(print,ResampleInstance)
 S3method(print,ResamplePrediction)
 S3method(print,SubsampleDesc)
 S3method(print,SupervisedTask)
+S3method(print,Task)
 S3method(print,TuneControl)
 S3method(print,TuneResult)
+S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
@@ -386,6 +396,7 @@ export(mae)
 export(makeAggregation)
 export(makeBaggingWrapper)
 export(makeClassifTask)
+export(makeClusterTask)
 export(makeCostMeasure)
 export(makeCostSensClassifWrapper)
 export(makeCostSensRegrWrapper)
@@ -418,6 +429,7 @@ export(makeResampleDesc)
 export(makeResampleInstance)
 export(makeSMOTEWrapper)
 export(makeSurvTask)
+export(makeTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
