refactor task hierarchy and introduce unsupervised and cluster task

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -440,6 +440,7 @@ export(makeResampleDesc)
 export(makeResampleInstance)
 export(makeSMOTEWrapper)
 export(makeSurvTask)
+export(makeTask)
 export(makeTuneControlCMAES)
 export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
