fix cluster performance measure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -343,6 +343,7 @@ export(cindex)
 export(configureMlr)
 export(createDummyFeatures)
 export(crossval)
+export(db)
 export(downsample)
 export(dropFeatures)
 export(estimateResidualVariance)
