--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,9 @@ S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.svm)
+S3method(makeRLearner,cluster.DBScan)
+S3method(makeRLearner,cluster.EM)
+S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.blackboost)
@@ -181,6 +184,9 @@ S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.svm)
+S3method(predictLearner,cluster.DBScan)
+S3method(predictLearner,cluster.EM)
+S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.cforest)
@@ -300,6 +306,9 @@ S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.svm)
+S3method(trainLearner,cluster.DBScan)
+S3method(trainLearner,cluster.EM)
+S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.cforest)
@@ -328,6 +337,8 @@ S3method(trainLearner,surv.glmboost)
 S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
+export(G1)
+export(G2)
 export(acc)
 export(addProperties)
 export(analyzeFeatSelResult)
@@ -482,6 +493,7 @@ export(setPredictType)
 export(setProperties)
 export(setThreshold)
 export(showHyperPars)
+export(silhouette)
 export(smote)
 export(sse)
 export(subsample)
