lots of small fixes and cleanups relating to introduction of clustering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ S3method(checkTaskCreation,UnsupervisedTask)
 S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
-S3method(downsample,SupervisedTask)
+S3method(downsample,Task)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(fixupData,ClassifTask)
@@ -40,10 +40,10 @@ S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
 S3method(isFailureModel,BaggingModel)
 S3method(isFailureModel,WrappedModel)
-S3method(listLearners,SupervisedTask)
+S3method(listLearners,Task)
 S3method(listLearners,character)
 S3method(listLearners,default)
-S3method(listMeasures,SupervisedTask)
+S3method(listMeasures,Task)
 S3method(listMeasures,character)
 S3method(listMeasures,default)
 S3method(makePrediction,TaskDescClassif)
@@ -133,7 +133,7 @@ S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
 S3method(makeWrappedModel,OptWrapper)
-S3method(normalizeFeatures,SupervisedTask)
+S3method(normalizeFeatures,Task)
 S3method(normalizeFeatures,data.frame)
 S3method(predict,WrappedModel)
 S3method(predictLearner,BaggingWrapper)
@@ -246,7 +246,7 @@ S3method(print,UnsupervisedTask)
 S3method(print,WrappedModel)
 S3method(reimpute,data.frame)
 S3method(reimpute,list)
-S3method(removeConstantFeatures,SupervisedTask)
+S3method(removeConstantFeatures,Task)
 S3method(removeConstantFeatures,data.frame)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
