new function: removeHyperPars

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,8 @@ S3method(reimpute,data.frame)
 S3method(reimpute,list)
 S3method(removeConstantFeatures,Task)
 S3method(removeConstantFeatures,data.frame)
+S3method(removeHyperPars,BaseWrapper)
+S3method(removeHyperPars,Learner)
 S3method(setHyperPars2,BaseWrapper)
 S3method(setHyperPars2,Learner)
 S3method(setPredictType,BaggingWrapper)
@@ -457,6 +459,7 @@ export(ppv)
 export(predictLearner)
 export(reimpute)
 export(removeConstantFeatures)
+export(removeHyperPars)
 export(removeProperties)
 export(repcv)
 export(resample)
