--- a/NAMESPACE
+++ b/NAMESPACE
@@ -460,6 +460,7 @@ export(performance)
 export(plotFilterValues)
 export(plotLearnerPrediction)
 export(plotThreshVsPerf)
+export(plotTuneMultiCritResult)
 export(ppv)
 export(predictLearner)
 export(reimpute)
