--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method(downsample,Task)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(getAggrPerformances,BenchmarkResult)
+S3method(getFailureModelMsg,BaggingModel)
+S3method(getFailureModelMsg,WrappedModel)
 S3method(getFeatSelResult,BenchmarkResult)
 S3method(getFeatSelResult,WrappedModel)
 S3method(getFilterResult,BenchmarkResult)
@@ -356,6 +358,7 @@ export(getConfMatrix)
 export(getCostSensClassifModel)
 export(getCostSensRegrModels)
 export(getCostSensWeightedPairsModels)
+export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterResult)
 export(getFilterValues)
