--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(getAggrPerformances,BenchmarkResult)
 S3method(getFailureModelMsg,BaggingModel)
+S3method(getFailureModelMsg,CostSensWeightedPairsModel)
 S3method(getFailureModelMsg,WrappedModel)
 S3method(getFeatSelResult,BenchmarkResult)
 S3method(getFeatSelResult,WrappedModel)
@@ -27,6 +28,7 @@ S3method(getPredictions,BenchmarkResult)
 S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
 S3method(isFailureModel,BaggingModel)
+S3method(isFailureModel,CostSensWeightedPairsModel)
 S3method(isFailureModel,WrappedModel)
 S3method(listLearners,Task)
 S3method(listLearners,character)
