New learner: regr.glmnet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ S3method(makeRLearner,regr.crs)
 S3method(makeRLearner,regr.earth)
 S3method(makeRLearner,regr.fnn)
 S3method(makeRLearner,regr.gbm)
+S3method(makeRLearner,regr.glmnet)
 S3method(makeRLearner,regr.kknn)
 S3method(makeRLearner,regr.km)
 S3method(makeRLearner,regr.ksvm)
@@ -181,6 +182,7 @@ S3method(predictLearner,regr.crs)
 S3method(predictLearner,regr.earth)
 S3method(predictLearner,regr.fnn)
 S3method(predictLearner,regr.gbm)
+S3method(predictLearner,regr.glmnet)
 S3method(predictLearner,regr.kknn)
 S3method(predictLearner,regr.km)
 S3method(predictLearner,regr.ksvm)
@@ -308,6 +310,7 @@ S3method(trainLearner,regr.crs)
 S3method(trainLearner,regr.earth)
 S3method(trainLearner,regr.fnn)
 S3method(trainLearner,regr.gbm)
+S3method(trainLearner,regr.glmnet)
 S3method(trainLearner,regr.kknn)
 S3method(trainLearner,regr.km)
 S3method(trainLearner,regr.ksvm)
