clean up lqa a little bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(makeRLearner,classif.ksvm)
 S3method(makeRLearner,classif.lda)
 S3method(makeRLearner,classif.linDA)
 S3method(makeRLearner,classif.logreg)
+S3method(makeRLearner,classif.lqa)
 S3method(makeRLearner,classif.lssvm)
 S3method(makeRLearner,classif.lvq1)
 S3method(makeRLearner,classif.mda)
@@ -158,6 +159,7 @@ S3method(predictLearner,classif.ksvm)
 S3method(predictLearner,classif.lda)
 S3method(predictLearner,classif.linDA)
 S3method(predictLearner,classif.logreg)
+S3method(predictLearner,classif.lqa)
 S3method(predictLearner,classif.lssvm)
 S3method(predictLearner,classif.lvq1)
 S3method(predictLearner,classif.mda)
@@ -287,6 +289,7 @@ S3method(trainLearner,classif.ksvm)
 S3method(trainLearner,classif.lda)
 S3method(trainLearner,classif.linDA)
 S3method(trainLearner,classif.logreg)
+S3method(trainLearner,classif.lqa)
 S3method(trainLearner,classif.lssvm)
 S3method(trainLearner,classif.lvq1)
 S3method(trainLearner,classif.mda)
