New learner: regr.plsr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ S3method(makeRLearner,regr.nnet)
 S3method(makeRLearner,regr.pcr)
 S3method(makeRLearner,regr.penalized.lasso)
 S3method(makeRLearner,regr.penalized.ridge)
+S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
@@ -196,6 +197,7 @@ S3method(predictLearner,regr.nnet)
 S3method(predictLearner,regr.pcr)
 S3method(predictLearner,regr.penalized.lasso)
 S3method(predictLearner,regr.penalized.ridge)
+S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
@@ -326,6 +328,7 @@ S3method(trainLearner,regr.nnet)
 S3method(trainLearner,regr.pcr)
 S3method(trainLearner,regr.penalized.lasso)
 S3method(trainLearner,regr.penalized.ridge)
+S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
