New learner: regr.randomForestSRC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ S3method(makeRLearner,regr.penalized.lasso)
 S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
+S3method(makeRLearner,regr.randomForestSRC)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
@@ -199,6 +200,7 @@ S3method(predictLearner,regr.penalized.lasso)
 S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
+S3method(predictLearner,regr.randomForestSRC)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
@@ -330,6 +332,7 @@ S3method(trainLearner,regr.penalized.lasso)
 S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
+S3method(trainLearner,regr.randomForestSRC)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
