--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(getTuneResult,BenchmarkResult)
 S3method(getTuneResult,WrappedModel)
 S3method(isFailureModel,BaggingModel)
 S3method(isFailureModel,CostSensWeightedPairsModel)
+S3method(isFailureModel,MulticlassModel)
 S3method(isFailureModel,WrappedModel)
 S3method(listLearners,Task)
 S3method(listLearners,character)
@@ -124,6 +125,7 @@ S3method(makeWrappedModel,CostSensClassifWrapper)
 S3method(makeWrappedModel,CostSensRegrWrapper)
 S3method(makeWrappedModel,CostSensWeightedPairsWrapper)
 S3method(makeWrappedModel,Learner)
+S3method(makeWrappedModel,MulticlassWrapper)
 S3method(makeWrappedModel,OptWrapper)
 S3method(normalizeFeatures,Task)
 S3method(normalizeFeatures,data.frame)
@@ -136,6 +138,7 @@ S3method(predictLearner,CostSensWeightedPairsWrapper)
 S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
+S3method(predictLearner,MulticlassWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.IBk)
@@ -264,6 +267,7 @@ S3method(trainLearner,DownsampleWrapper)
 S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
+S3method(trainLearner,MulticlassWrapper)
 S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
@@ -450,6 +454,7 @@ export(makeLearner)
 export(makeMeasure)
 export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
+export(makeMulticlassWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
