--- a/NAMESPACE
+++ b/NAMESPACE
@@ -557,6 +557,7 @@ export(undersample)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(methods)
 import(parallelMap)
 importFrom(codetools,findGlobals)
 importFrom(stats,predict)
